--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,19 @@
 body
 {   
-    margin: 0;
+    width: 97%;
+    min-width: 360px;
+    margin: auto;
     margin-bottom: 5%;
+    background-color:#E2F6CA;
 }
   
 h1
 {
-    margin: 0 0 10px 0;
+    margin: 0;
+    padding: 0;
     font-size: 6rem;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Kalam', cursive;
 }
 
 .result
@@ -17,10 +21,9 @@ h1
     padding: 0.5rem;
     font-size: 3rem;
     text-align: center;
-    color: gold;
-    font-family: 'REM', sans-serif;
-    background-color: black ;
-  
+    color: #F6FA70;
+    font-family:  'Edu SA Beginner', cursive;
+    background-color: #00DFA2 ;
 }
 .headingDice
 {
@@ -43,6 +46,7 @@ h1
 }
 .playerNo
 {
+    margin-top: 1rem;
     font-size: 2rem;
     text-align: center;
     color: black;
@@ -58,18 +62,21 @@ h1
 
 .reload
 { 
+    display: flex;
     grid-column: span 2;
     text-align: center;
-    margin-top: 4rem;
+    margin-top: 1.5rem;
+    justify-content: center;
    
 }
 
 .Button
 {
     background-color:cornflowerblue;
-    padding:2% 5%;
+    padding:2%;
+    margin: 1rem 0.5rem;
     color: antiquewhite;
-    font-size: 2rem;
+    font-size: 1.2rem;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border: 0;
     border-radius: 5%;
@@ -78,31 +85,27 @@ h1
 
 @media (max-width : 480px) {
    
-    h1 {
+h1 {
     
     margin: 0 0 5px 0;
     font-size: 3rem;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
     }
-    #heading
+#heading
     {  
         display: flex;
         justify-content: center;
+      
     }
 
-    .result {   
-    margin : 0;
-    margin-top: 1rem;
+.result {   
+    margin : 0.5rem;
     padding: 1rem;
     font-size: 1.5rem;
-    text-align: center;
-    color: gold;
-    font-family: 'REM', sans-serif;
-    background-color: black ;
     }    
 
-    .headingDice {
+.headingDice {
    
     display: block;
     margin-left: auto;
@@ -110,34 +113,44 @@ h1
     height: 3rem;
      }
 
-     .diceImgBox > img {
-        width: 200px;
+     
+.diceImgBox
+{
+    /*border: 1px dashed red;*/
+    width: 220px; height: 220px;
+    text-align: center;
+    margin: 0;
+  
+}
+
+.playerNo
+{
+    margin : 1rem auto ;
+}
+.diceImgBox > img {
+        width: 150px;
      }
 
-     .grid-container
-{   
-    display: grid;
-    gap : 1rem;
-    grid-template : 1fr 1fr 10rem/ 1fr;
-}
 
-#dice1
-{
-    grid-row: 1/2;
-    margin-bottom: 1rem;
-}
 
-#dice2
-{
-    grid-row: 2/3;
-}
 .reload{
-    margin-bottom: 0;
-  
-
+    margin: 0;
+    height : 3.5rem;
+    padding: 2%;
 }
+
 .Button
 {
-    font-size: 1.5rem;
+    background-color:cornflowerblue;
+    height: 3rem;  width: 4rem;
+    padding:0 2%;
+    margin: 0 1%;
+    color: antiquewhite;
+    font-size: 1rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border: 0;
+    border-radius: 20%;
 }
+
+
 }
