--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 body
 {   
-    min-width: 360px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
     margin: auto;
     margin-bottom: 5%;
     background-color:#E2F6CA;
 }
-  
+
 h1
 {
     margin: 0;
@@ -16,13 +19,15 @@ h1
 }
 
 .result
-{   margin : 0;
+{   display: block;
+    margin : 0;
     padding: 0.5rem;
     font-size: 3rem;
     text-align: center;
     color: #F6FA70;
     font-family:  'Edu SA Beginner', cursive;
     background-color: #00DFA2 ;
+    width: 100%;
 }
 .headingDice
 {
@@ -34,6 +39,7 @@ h1
     display: grid;
     gap : 1rem;
     grid-template : 1fr / 1fr 1fr;
+    width: 100%;
 }
 
 .flex-container
@@ -43,6 +49,7 @@ h1
     justify-content: center;
     align-items: center;
 }
+
 .playerNo
 {
     margin-top: 1rem;
@@ -104,6 +111,14 @@ h1 {
     font-size: 1.5rem;
     }    
 
+.grid-container
+{
+    
+    margin-left: auto;
+    margin-right: auto;
+    place-items: center;
+}
+
 .headingDice {
    
     display: block;
@@ -112,25 +127,47 @@ h1 {
     height: 3rem;
      }
 
+     .resEmoji
+     {
+        width: 100%;
+        text-align: center;
+        font-size: 2rem;
+        margin: 1rem;
+     }
      
 .diceImgBox
 {
     /*border: 1px dashed red;*/
-    width: 220px; height: 220px;
-    text-align: center;
+    width: 150px; height: 220px;
     margin: 0;
+    margin-bottom: 1rem;
+ 
+}
+
+#dice1
+{
+    text-align: right;
+    padding-right: 1rem;
+}
+
+
+#dice2
+{
+    text-align: left;
+    padding-left: 1rem;
+}
+.playerNo
+{ text-align: center !important;
+
+    margin: 1rem auto 0.5rem;
+ 
+    font-size: 1.5rem;
   
 }
-
-.playerNo
+.diceImgBox > img 
 {
-    margin : 1rem auto ;
+    width: 150px;
 }
-.diceImgBox > img {
-        width: 150px;
-     }
-
-
 
 .reload{
     margin: 0;
@@ -143,7 +180,7 @@ h1 {
     background-color:cornflowerblue;
     height: 3rem;  width: 4rem;
     padding:0 2%;
-    margin: 0 1%;
+    margin: 0 4%;
     color: antiquewhite;
     font-size: 1rem;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
